--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller PyQt6 pyqtgraph
+        pip install pyinstaller PyQt6 pyqtgraph Pillow
         
     - name: Build with PyInstaller
       run: |
